--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,7 +67,7 @@
         android:layout_marginEnd="@dimen/_12sdp"
         >
 
-        <com.app.l_pesa.common.CustomButton
+        <com.app.l_pesa.common.CustomButtonRegular
             android:id="@+id/buttonSignUp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -112,7 +112,7 @@
 
         >
 
-        <com.app.l_pesa.common.CustomButton
+        <com.app.l_pesa.common.CustomButtonRegular
             android:id="@+id/buttonLogin"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
