--- a/app/src/main/res/layout/content_change_password.xml
+++ b/app/src/main/res/layout/content_change_password.xml
@@ -21,9 +21,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="3"
+        android:layout_weight="4.5"
         android:orientation="vertical"
-        android:weightSum="7"
+        android:weightSum="8"
         android:background="@drawable/bg_white_view"
         android:layout_marginStart="@dimen/_10sdp"
         android:layout_marginEnd="@dimen/_10sdp">
@@ -63,7 +63,6 @@
                 </android.support.design.widget.TextInputLayout>
 
         </LinearLayout>
-
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -134,6 +133,46 @@
 
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1.5"
+            android:orientation="horizontal"
+            tools:ignore="NestedWeights"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:weightSum="1">
+            <com.app.l_pesa.common.CustomButtonRegular
+                android:id="@+id/buttonSubmit"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight=".45"
+                android:background="@drawable/bg_green_view"
+                android:textSize="@dimen/_12sdp"
+                android:textColor="@color/colorAppDeep"
+                android:text="@string/submit"
+                android:textAllCaps="true"
+                />
+            <View
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight=".10"
+                />
+
+            <com.app.l_pesa.common.CustomButtonRegular
+                android:id="@+id/buttonCancel"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight=".45"
+                android:background="@drawable/bg_grey_view"
+                android:textSize="@dimen/_12sdp"
+                android:textColor="@color/colorSemiBlack"
+                android:text="@string/cancel"
+                android:textAllCaps="true"
+                />
+
+        </LinearLayout>
+
     </LinearLayout>
 
     <LinearLayout
@@ -158,7 +197,7 @@
             android:textSize="@dimen/_12sdp"
             android:textColor="@color/colorSemiBlack"
             android:text="@string/password_should"
-            android:padding="@dimen/_3sdp"
+            android:padding="@dimen/_4sdp"
             />
         <LinearLayout
             android:layout_width="match_parent"
@@ -166,7 +205,15 @@
             android:orientation="horizontal"
             android:paddingStart="@dimen/_5sdp"
             android:paddingEnd="@dimen/_2sdp"
+            android:gravity="center"
             >
+            <ImageView
+                android:id="@+id/imgRuleOne"
+                android:contentDescription="@string/app_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_red_tick"
+                />
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txt_rule_one"
                 android:layout_width="match_parent"
@@ -185,7 +232,15 @@
             android:paddingStart="@dimen/_5sdp"
             android:paddingEnd="@dimen/_2sdp"
             android:layout_marginTop="@dimen/_2sdp"
+            android:gravity="center"
             >
+            <ImageView
+                android:id="@+id/imgRuleTwo"
+                android:contentDescription="@string/app_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_red_tick"
+                />
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txt_rule_two"
                 android:layout_width="match_parent"
@@ -204,7 +259,15 @@
             android:paddingStart="@dimen/_5sdp"
             android:paddingEnd="@dimen/_2sdp"
             android:layout_marginTop="@dimen/_2sdp"
+            android:gravity="center"
             >
+            <ImageView
+                android:id="@+id/imgRuleThree"
+                android:contentDescription="@string/app_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_red_tick"
+                />
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txt_rule_three"
                 android:layout_width="match_parent"
@@ -223,7 +286,15 @@
             android:paddingStart="@dimen/_5sdp"
             android:paddingEnd="@dimen/_2sdp"
             android:layout_marginTop="@dimen/_2sdp"
+            android:gravity="center"
             >
+            <ImageView
+                android:id="@+id/imgRuleFour"
+                android:contentDescription="@string/app_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_red_tick"
+                />
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txt_rule_four"
                 android:layout_width="match_parent"
@@ -242,7 +313,16 @@
             android:paddingStart="@dimen/_5sdp"
             android:paddingEnd="@dimen/_2sdp"
             android:layout_marginTop="@dimen/_2sdp"
+            android:gravity="center"
             >
+
+            <ImageView
+                android:id="@+id/imgRuleFive"
+                android:contentDescription="@string/app_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_red_tick"
+                />
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txt_rule_five"
                 android:layout_width="match_parent"
@@ -255,7 +335,6 @@
         </LinearLayout>
 
     </LinearLayout>
-
 
 
 </LinearLayout>
