--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,8 +5,10 @@
     <color name="colorPrimaryDark">#00695c</color>
     <color name="colorAccent">#00695c</color>
     <color name="colorApp">#00695c</color>
+    <color name="colorAppDeep">#001a17</color>
     <color name="colorBlack">#000000</color>
     <color name="colorSemiBlack">#404040</color>
+    <color name="colorGrey">#bfbfbf</color>
     <color name="colorLightBlack">#d9d9d9</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="screenBackground">#f3f3f3</color>
