--- a/app/src/main/res/layout/content_change_password.xml
+++ b/app/src/main/res/layout/content_change_password.xml
@@ -81,7 +81,7 @@
                 app:passwordToggleEnabled="true"
                 >
 
-                <android.support.design.widget.TextInputEditText
+                <com.app.l_pesa.common.CommonEditTextRegular
                     android:id="@+id/tieNewPassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -115,7 +115,7 @@
                 android:layout_height="wrap_content"
                 >
 
-                <android.support.design.widget.TextInputEditText
+                <com.app.l_pesa.common.CommonEditTextRegular
                     android:id="@+id/tieConfirmNewPassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -142,6 +142,7 @@
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginEnd="@dimen/_10sdp"
             android:weightSum="1">
+
             <com.app.l_pesa.common.CustomButtonRegular
                 android:id="@+id/buttonSubmit"
                 android:layout_width="0dp"
