--- a/app/src/main/res/layout/content_change_password.xml
+++ b/app/src/main/res/layout/content_change_password.xml
@@ -39,7 +39,6 @@
             android:layout_marginEnd="@dimen/_10sdp">
 
                 <android.support.design.widget.TextInputLayout
-                    android:id="@+id/tilCurrentPassword"
                     style="@style/customInputLayoutStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -47,7 +46,7 @@
                     >
 
                     <android.support.design.widget.TextInputEditText
-                        android:id="@+id/tieCurrentPassword"
+                        android:id="@+id/etCurrentPassword"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/current_password"
@@ -74,7 +73,6 @@
             android:layout_marginEnd="@dimen/_10sdp">
 
             <android.support.design.widget.TextInputLayout
-                android:id="@+id/tilNewPassword"
                 style="@style/customInputLayoutStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -82,7 +80,7 @@
                 >
 
                 <com.app.l_pesa.common.CommonEditTextRegular
-                    android:id="@+id/tieNewPassword"
+                    android:id="@+id/etNewPassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/new_password"
@@ -116,7 +114,7 @@
                 >
 
                 <com.app.l_pesa.common.CommonEditTextRegular
-                    android:id="@+id/tieConfirmNewPassword"
+                    android:id="@+id/etConfirmNewPassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/confirm_new_password"
