--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#00695c</color>
-    <color name="colorPrimaryLight">#009987</color>
+    <color name="colorPrimaryLight">#7EDBCF</color>
     <color name="colorPrimaryDark">#00695c</color>
     <color name="colorAccent">#00695c</color>
     <color name="colorApp">#00695c</color>
@@ -13,6 +13,6 @@
     <color name="colorWhite">#FFFFFF</color>
     <color name="screenBackground">#f3f3f3</color>
     <color name="colorYellow">#f3bb25</color>
-    <color name="colorRed">#ff3333</color>
+    <color name="colorRed">#ef3f3f</color>
     <color name="mtrl_textinput_default_box_stroke_color">#009987</color>
 </resources>
