--- a/app/src/main/res/layout/content_change_password.xml
+++ b/app/src/main/res/layout/content_change_password.xml
@@ -14,7 +14,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight=".50"
+        android:layout_weight=".25"
         android:orientation="vertical"
        />
 
@@ -155,7 +155,7 @@
             tools:ignore="NestedWeights"
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginEnd="@dimen/_10sdp"
-            android:layout_marginTop="@dimen/_2sdp"
+            android:layout_marginTop="@dimen/_3sdp"
             android:weightSum="1">
 
             <com.app.l_pesa.common.CustomButtonRegular
@@ -195,7 +195,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight=".50"
+        android:layout_weight=".25"
         android:orientation="vertical"
         />
 
@@ -215,6 +215,8 @@
             android:textColor="@color/colorSemiBlack"
             android:text="@string/password_should"
             android:padding="@dimen/_4sdp"
+            android:layout_marginTop="@dimen/_1sdp"
+            android:layout_marginStart="@dimen/_1sdp"
             />
         <LinearLayout
             android:layout_width="match_parent"
