--- a/app/src/main/res/layout/custom_snackbar.xml
+++ b/app/src/main/res/layout/custom_snackbar.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:gravity="center"
-    android:background="@color/colorRed"
+    android:id="@+id/rlRoot"
     android:layout_height="wrap_content"
     android:padding="@dimen/_5sdp"
     >
