--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -1,152 +1,320 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ll_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:weightSum="15"
-    android:background="@color/screenBackground">
-
-    <com.app.l_pesa.common.CommonTextRegular
-        android:id="@+id/txtHeader"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1.25"
-        android:text="@string/forgot_password"
-        android:gravity="center"
-        android:textSize="@dimen/_14sdp"
-        android:textColor="@color/colorWhite"
-        android:background="@color/colorAccent"
-
-        />
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="8"
-        android:layout_marginTop="@dimen/_12sdp"
-        >
+    android:background="@drawable/login_bg">
 
     <LinearLayout
+
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/_37sdp"
-        android:background="@drawable/bg_white_view"
-        android:orientation="vertical"
-        android:layout_marginStart="@dimen/_12sdp"
-        android:layout_marginEnd="@dimen/_12sdp"
-        android:weightSum="10">
+        android:layout_height="0dp"
+        android:layout_weight="4.5"
+        android:gravity="center"
+        android:orientation="horizontal"
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="2.25"/>
+        >
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="2"
-            android:orientation="horizontal"
-            android:layout_marginStart="@dimen/_10sdp"
-            android:layout_marginEnd="@dimen/_10sdp">
-
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/tilMobile"
-                style="@style/customInputLayoutStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                >
-
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/tieMobile"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/phone_no"
-                    android:inputType="numberSigned"
-                    android:maxLength="13"
-                    android:maxLines="1"
-                    android:textSize="@dimen/_12sdp"
-                    app:autoSizeMaxTextSize="@dimen/_14sdp"
-                    app:autoSizeMinTextSize="@dimen/_10sdp"
-                    app:autoSizeStepGranularity="0.2sp"
-                    app:autoSizeTextType="uniform"
-                    />
-            </android.support.design.widget.TextInputLayout>
-
-        </LinearLayout>
-
-        <com.app.l_pesa.common.CommonTextRegular
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:text="@string/or"
-            android:gravity="center"
-            android:textSize="@dimen/_13sdp"
-            android:textColor="@color/colorSemiBlack"
-            android:textAllCaps="true"
-
-            />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="2"
-            android:orientation="horizontal"
-            android:layout_marginStart="@dimen/_10sdp"
-            android:layout_marginEnd="@dimen/_10sdp">
-
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/tilEmail"
-                style="@style/customInputLayoutStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/tieEmail"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/email_address"
-                    android:inputType="textEmailAddress|textNoSuggestions"
-                    android:maxLength="30"
-                    android:maxLines="1"
-                    android:imeOptions="actionDone"
-                    android:textSize="@dimen/_12sdp"
-                    app:autoSizeMaxTextSize="@dimen/_14sdp"
-                    app:autoSizeMinTextSize="@dimen/_10sdp"
-                    app:autoSizeStepGranularity="0.2sp"
-                    app:autoSizeTextType="uniform"/>
-            </android.support.design.widget.TextInputLayout>
-
-        </LinearLayout>
-
-        <com.app.l_pesa.common.CommonTextRegular
-            android:id="@+id/txtSubmit"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1.75"
-            android:text="@string/submit"
-            android:gravity="center"
-            android:textSize="@dimen/_16sdp"
-            android:textColor="@color/colorSemiBlack"
-            android:textAllCaps="true"
-            android:background="@drawable/bg_yellow_bg"
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="@dimen/_75sdp"
+            android:layout_height="@dimen/_75sdp"
+            android:src="@drawable/lpesa_logo"
+            android:contentDescription="@string/app_name"
 
             />
 
     </LinearLayout>
 
-    <ImageView
-        android:layout_width="@dimen/_75sdp"
-        android:layout_height="@dimen/_75sdp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:contentDescription="@string/app_name"
-        android:src="@drawable/lpesa_logo" />
+    <LinearLayout
+        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2.5">
 
+        <com.app.l_pesa.common.CommonTextRegular
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@string/forgot_password"
+            android:gravity="center"
+            android:textColor="@color/colorYellow"
+            android:shadowColor="#000000"
+            android:shadowDx="2.7"
+            android:shadowDy="2.7"
+            android:shadowRadius="1"
+            android:textSize="@dimen/_17sdp"/>
+
+    </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/rl_PHONE"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1.25"
+        android:gravity="center"
+        android:layout_marginStart="@dimen/_12sdp"
+        android:layout_marginEnd="@dimen/_12sdp"
+        android:background="@drawable/bg_black_view"
+        >
+
+        <LinearLayout
+            android:id="@+id/ll_flag_section"
+            android:layout_width="@dimen/_50sdp"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical">
+
+            <ImageView
+                android:id="@+id/img_country"
+                android:layout_width="@dimen/_35sdp"
+                android:layout_height="@dimen/_20sdp"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:contentDescription="@string/app_name"
+
+                />
+
+            <ImageView
+                android:layout_width="@dimen/_22sdp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_2sdp"
+                android:layout_marginEnd="@dimen/_3sdp"
+                android:contentDescription="@string/app_name"
+                />
+            <View
+                android:layout_width="@dimen/_5sdp"
+                android:layout_height="wrap_content"
+                />
+        </LinearLayout>
+
+        <View
+            android:id="@+id/view_1"
+            android:layout_width="@dimen/_1sdp"
+            android:layout_height="match_parent"
+            android:layout_toEndOf="@+id/ll_flag_section"
+            android:layout_marginTop="@dimen/_7sdp"
+            android:layout_marginBottom="@dimen/_7sdp"
+            android:layout_marginStart="@dimen/_5sdp"
+            android:background="@color/colorWhite"/>
+
+
+        <com.app.l_pesa.common.CommonEditTextRegular
+            android:id="@+id/etPhone"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_toEndOf="@+id/view_1"
+            android:layout_marginStart="@dimen/_7sdp"
+            android:hint="@string/phone_no"
+            android:paddingStart="@dimen/_3sdp"
+            android:paddingEnd="@dimen/_2sdp"
+            android:background="@android:color/transparent"
+            android:textSize="@dimen/_15sdp"
+            android:layout_margin="@dimen/_5sdp"
+            android:textColor="@color/colorWhite"
+            android:inputType="numberSigned"
+            android:textColorHint="@color/colorWhite"
+            android:maxLength="13"
+            android:text=""
+            android:gravity="start|center"
+            android:cursorVisible="true"
+            android:textCursorDrawable="@null"
+            android:focusable="true"
+            android:maxLines="1"
+            android:longClickable="false"
+
+
+            />
     </RelativeLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="vertical"
+
+        >
+
+        <com.app.l_pesa.common.CommonTextRegular
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@string/or"
+            android:gravity="center"
+            android:textColor="@color/colorYellow"
+            android:shadowColor="#000000"
+            android:shadowDx="2.7"
+            android:shadowDy="2.7"
+            android:shadowRadius="1"
+            android:textSize="@dimen/_17sdp"/>
+
+    </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1.25"
+        android:gravity="center"
+        android:layout_marginStart="@dimen/_12sdp"
+        android:layout_marginEnd="@dimen/_12sdp"
+        android:background="@drawable/bg_black_view"
+        >
+
+        <LinearLayout
+            android:id="@+id/ll_password"
+            android:layout_width="@dimen/_50sdp"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical">
+
+            <ImageView
+                android:id="@+id/img_password"
+                android:layout_width="@dimen/_35sdp"
+                android:layout_height="@dimen/_20sdp"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:contentDescription="@string/app_name"
+                />
+            <ImageView
+                android:layout_width="@dimen/_22sdp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_2sdp"
+                android:layout_marginEnd="@dimen/_3sdp"
+                android:contentDescription="@string/app_name"
+                />
+            <View
+                android:layout_width="@dimen/_5sdp"
+                android:layout_height="wrap_content"
+                />
+
+
+        </LinearLayout>
+
+        <View
+            android:id="@+id/viewPassword"
+            android:layout_width="@dimen/_1sdp"
+            android:layout_height="match_parent"
+            android:layout_toEndOf="@+id/ll_password"
+            android:layout_marginTop="@dimen/_7sdp"
+            android:layout_marginBottom="@dimen/_7sdp"
+            android:layout_marginStart="@dimen/_5sdp"
+            android:background="@color/colorWhite"/>
+
+
+        <com.app.l_pesa.common.CommonEditTextRegular
+            android:id="@+id/etEmail"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_toEndOf="@+id/viewPassword"
+            android:layout_marginStart="@dimen/_7sdp"
+            android:hint="@string/email_address"
+            android:paddingStart="@dimen/_3sdp"
+            android:paddingEnd="@dimen/_2sdp"
+            android:background="@android:color/transparent"
+            android:textSize="@dimen/_15sdp"
+            android:layout_margin="@dimen/_5sdp"
+            android:textColor="@color/colorWhite"
+            android:inputType="textEmailAddress"
+            android:textColorHint="@color/colorWhite"
+            android:maxLength="30"
+            android:text=""
+            android:gravity="start|center"
+            android:cursorVisible="true"
+            android:textCursorDrawable="@null"
+            android:focusable="true"
+            android:imeOptions="actionDone"
+            android:maxLines="1"
+            android:longClickable="false"
+
+            />
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight=".50"
+        android:orientation="vertical"
+
+        />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1.25"
+        android:layout_marginLeft="@dimen/_12sdp"
+        android:layout_marginRight="@dimen/_12sdp"
+        android:orientation="horizontal"
+        android:weightSum="1"
+        >
+
+        <com.app.l_pesa.common.CommonTextRegular
+            android:id="@+id/txtSubmit"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".45"
+            android:text="@string/submit"
+            android:gravity="center"
+            android:textSize="@dimen/_16sdp"
+            android:textColor="@color/colorWhite"
+            android:textAllCaps="true"
+            android:background="@drawable/bg_yellow_bg"
+            android:textStyle="bold"
+            tools:ignore="NestedWeights" />
+
+        <View
+
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".10" />
+
+        <com.app.l_pesa.common.CommonTextRegular
+            android:id="@+id/txtCancel"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight=".45"
+            android:text="@string/cancel"
+            android:gravity="center"
+            android:textSize="@dimen/_16sdp"
+            android:textColor="@color/colorWhite"
+            android:textAllCaps="true"
+            android:background="@drawable/bg_black_view"
+            android:textStyle="bold"
+            tools:ignore="NestedWeights" />
+    </LinearLayout>
+
+    <LinearLayout
+
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight=".50"
+        android:orientation="vertical"
+
+        />
+
+
+    <LinearLayout
+        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1.25"/>
 
 
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="horizontal"
+        android:gravity="center"
+        >
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminateTint="@color/colorWhite"
+            android:layout_gravity="center_horizontal"
+            android:padding="@dimen/_5sdp"
+            android:visibility="invisible"
+            />
+    </LinearLayout>
 </LinearLayout>
 
