--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
         android:layout_weight="2.50">
 
         <com.app.l_pesa.common.CommonTextRegular
-            android:textColor="#ffe82a"
+            android:textColor="@color/colorYellow"
             android:shadowColor="#000000"
             android:shadowDx="2.7"
             android:shadowDy="2.7"
