--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -145,7 +145,8 @@
             android:shadowDx="2.7"
             android:shadowDy="2.7"
             android:shadowRadius="1"
-            android:textSize="@dimen/_17sdp"/>
+            android:textSize="@dimen/_17sdp"
+            android:textAllCaps="true"/>
 
     </LinearLayout>
 
@@ -237,7 +238,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1.25"
+        android:layout_weight="1.20"
         android:layout_marginLeft="@dimen/_12sdp"
         android:layout_marginRight="@dimen/_12sdp"
         android:orientation="horizontal"
@@ -283,7 +284,7 @@
 
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight=".50"
+        android:layout_weight=".55"
         android:orientation="vertical"
 
         />
